--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,17 @@ dependencies {
 
 
     // dependancy sor slider view
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.github.smarteist:autoimageslider:1.3.9'
+    //recyclerview
+    implementation 'com.android.support:recyclerview-v7:30.0.0'
 
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    //circle imageview
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.smarteist:autoimageslider:1.3.9'
     // dependancy for loading image from url
 
